# samanta-os

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
backend/: main.py
components/: AudioTranscriber.tsx
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: AudioRecorder.js  AudioTranscriber.js  OpeningAnimation.js
frontend/pages/: _document.js  index.js
pages/: index.tsx
public/: audioWorkletProcessor.js
